test/src/e2e_vm_tests/test_programs/should_pass/dca/trait_method/src/main.sw
script;

use trait_method_lib::*;

impl MyTrait for MyStruct {
    fn trait_method(self) -> bool {
        true
    }
}

fn main() {
    let s = MyStruct {};
    let b = s.trait_method();
}
